# EmployeesDirectory

./: CMakeLists.txt  README.md  info.txt
src/: employee.cpp  employee.h  main.cpp  russian_surnames.txt
